# mockcraft

./: .gitignore  CONTRIBUTING.md  README.md  README_ja.md  README_ko.md  README_zh-CN.md  README_zh-TW.md  env.example  examples\order.yaml  examples\product.yaml  examples\user.yaml  mockcraft\__init__.py  mockcraft\cli\main.py  mockcraft\core.py  mockcraft\engine.py  mockcraft\formatters\__init__.py  mockcraft\providers\basic.py  mockcraft\providers\contact.py  mockcraft\providers\network.py  mockcraft\providers\number.py  mockcraft\providers\person.py  mockcraft\providers\registry.py  mockcraft\providers\text.py  mockcraft\providers\time_data.py  mockcraft\schemas\__init__.py  pyproject.toml  tests\test_mockcraft.py
.github/workflows/: ci.yml
